# nerd

./: .gitignore  Dockerfile  README.md  package-lock.json  package.json  pyproject.toml  tailwind.config.js
nerd/: app.py
nerd/static/: auth.js  index.js
nerd/templates/: _base.jinja  zone.jinja
src/nerd/: __init__.py  __main__.py
src/nerd/static/: api.js  auth.js  index.js  key.js  templates.js  zone.js
src/nerd/templates/: _base.jinja  index.jinja  record.jinja  zone.jinja
