[project]
name = "nerd"
version = "0.1.0"
description = "A frontend for the Hetzner DNS API (hetzNERDns)."
authors = [
    { name = "thcrt", email = "110127860+thcrt@users.noreply.github.com" }
]
dependencies = [
    "flask>=3.0.3",
    "waitress>=3.0.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"nerd" = "nerd:__main__.main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/nerd"]
