[project]
name = "nerD"
version = "1.1.0"
description = "nerD, the HetznerDNSmanager. A frontend for the Hetzner DNS API."
authors = [
    { name = "thcrt", email = "110127860+thcrt@users.noreply.github.com" }
]
dependencies = [
    "flask>=3.0.3",
    "waitress>=3.0.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[tool.rye]
managed = true
virtual = true
dev-dependencies = []

[tool.rye.scripts]
dev = "flask run --app nerd/app --debug"
build-watch = "npx tailwindcss --output nerd/static/tailwind.css --watch"
build = "npx tailwindcss --output nerd/static/tailwind.css"
run = "python nerd/app.py"
